# openai-chatkit-advanced-samples

./: .gitignore  .mcp.json  .mcp.library.json  .vercelignore  CLAUDE.md  README.md  agents.md  package-lock.json  package.json  vercel.json
.claude/commands/: create-chatkit-app.md  create-dot-grid-image.md  dotgrid.md  frontend-designer.md  prime.md
.github/workflows/: ci.yml
apps/simple-chat/: package-lock.json  package.json
apps/simple-chat/backend/: pyproject.toml
apps/simple-chat/backend/app/: main.py  server.py
apps/simple-chat/backend/app/agents/: simple_agent.py
backend/app/: cat_agent.py  cat_name_widget.py  cat_store.py  cat_widget.py  chat.py  main.py  memory_store.py  name_suggestions_widget.py  non_streaming.py  profile_card_widget.py  thread_item_converter.py
backend/examples/: whatsapp_integration.py
docs/: AGENT-BUILDER.md  CHATKIT.md  DEVELOPER_GUIDE.md  NON_STREAMING.md  architecture.md  cat-lounge-workflow.md  chatkit-customization.md  creating-apps.md  getting-started.md  ui-agent-interaction.md
docs/examples/: cat-lounge.md  customer-support.md  metro-map.md  news-guide.md
examples/: AGENTS.md
examples/customer-support/: README.md  package.json
examples/mercedes_benz_automobile/: .gitignore  README.md  package.json
examples/mercedes_benz_automobile/backend/: pyproject.toml
examples/mercedes_benz_automobile/backend/app/: __init__.py  chat.py  constants.py  main.py  memory_store.py  vehicle_state.py
examples/metro-map/: README.md
examples/news-guide/: README.md
frontend/: eslint.config.js  package-lock.json  package.json
(+206 files in other folders)
